# generator-simarts-cc

./: .travis.yml  LICENSE  README.md  package-lock.json  package.json
__tests__/: app.js
generators/app/: index.js
generators/app/templates/: .editorconfig  CMakeLists.txt  main.cc
generators/app/templates/tests/: CMakeLists.txt  test_project_name.cc
